 # [#25865] Cannot set custom offset for the tooltip
 # [#25938] Repetition code in JHTMLImage::site()
 # [#25974] weblinks component
 # [#26067] Wrong colspan in admin/mod_latest when there are no results
 # [#26083] Update SqueezeBox to version 1.2
 # [#23410] Remove <meta name="title">

08-Jun-2011 Christophe Demko
 # [#26062] gray bars in Firefox/Safari above and under the Submenue in adminlists (Rouven Weßling)
 # [#26065] Bluestork clean up (Rouven Weßling)

07-Jun-2011 Jean-Marie Simonet
 $ Updating site en-GB.lib_joomla.ini
 
07-Jun-2011 Christophe Demko
 + [#25409] Examples for the editor, search & system plugins. (Peter Nurse)
 # [#26041] Menu type manager slows down considerably as menu tree gets larger (Andrew Eddie)

06-Jun-2011 Mark Dexter
 + [#25977] Improve the installation (Rouven Weßling)
 + [#26046] Rename administrator/help/helpsites-1.6.xml File

06-Jun-2011 Jean-Marie Simonet
 $ [#26055] Category spelling error in help text. Thanks Bill.
 # [#26052] Improve com_categories batchCopy. Thanks Michael.
 # [#26025] Article - save as copy. Thanks Michael.
 # [#25873] *Featured Articles Menu Option does not show option to select category as intended

05-Jun-2011 Jean-Marie Simonet
 # [#26051] Copy tasks allow multiple home menu items to be set. Thanks Michael.

-------------------- 1.7.0 Alpha Release [04-Jun-2011] ------------------

04-Jun-2011 Mark Dexter
 # Revert [#25873] *Featured Articles Menu Option change since this causes errors on new install

04-Jun-2011 Jean-Marie Simonet
 # [#25873] *Featured Articles Menu Option does not show option to select category as intended
 - [#26013] The Flag Image for the Language Tamil ( ta) is Incorrect
 
04-Jun-2011 Mark Dexter
 # [#26028] Fix backward incompatible changes to JVersion
 # [#25634] Extension Manager: wrong installer method called during update
 # [#25635] Extension Manager: possibility to set redirect during update
 # [#25923] Possible error in JModuleHelper