@@ -27,17 +27,16 @@
 		</language>
 	</languages>
 	<administration>
-		<menu>Contacts</menu>
+		<menu>com_contact</menu>
 		<submenu>
 			<!--
 				Note that all & must be escaped to &amp; for the file to be valid
 				XML and be parsed by the installer
 			-->
-			<menu link="index.php?option=com_contact" img="class:contact"
-				alt="Contact/Contacts">Contacts</menu>
-			<menu link="index.php?option=com_categories&amp;extension=com_contact"
-				view="categories" img="class:contact-cat" alt="Contacts/Categories">Categories
-			</menu>
+			<menu link="option=com_contact" img="class:contact"
+				alt="Contact/Contacts">com_contact_contacts</menu>
+			<menu link="option=com_categories&amp;extension=com_contact"
+				view="categories" img="class:contact-cat" alt="Contacts/Categories">com_contact_categories</menu>
 		</submenu>
 		<files folder="admin">
 			<filename>access.xml</filename>
